--- a/.eslintrc
+++ b/.eslintrc
@@ -7,7 +7,8 @@
     "indent": [1, 2],
     "comma-style": 1,
     "quotes": [1, "single"],
-    "new-cap": 0
+    "new-cap": 0,
+    "no-shadow": 1
   },
   "env": {
     "node": true
